--- a/src/modals/examStartingModal.html
+++ b/src/modals/examStartingModal.html
@@ -107,8 +107,7 @@
     <p>
      
 
-      This is a timed exam. You cannot turn the timer off for the practice exams.
-      The AWS certification exam may contain anywhere from 65 to 80 questions and you are given 170 minutes. Based on that on average you have approximately 2 minutes for 
+      This is a timed exam. The AWS certification exam may contain anywhere from 65 to 80 questions and you are given 170 minutes. Based on that on average you have approximately 2 minutes for 
       each question. These practice exams contain a mix of questions from all topics that you are expected to know for the certification exam.
       Good luck.
     </p>
