--- a/src/modals/examStartingModal.html
+++ b/src/modals/examStartingModal.html
@@ -34,7 +34,7 @@
         <img src="assets/img/icon.png">
       </ion-avatar>
       <h2>{{title}}</h2>
-      <p>{{note}}</p>
+      <p>{{note}} , {{time}}</p>
     </ion-item>
     <hr/>
 
