--- a/src/pages/videos/videos.html
+++ b/src/pages/videos/videos.html
@@ -72,11 +72,55 @@
   </ion-item>
 
   <ion-item>
-    <span item-left>33 min</span>
+    <span item-left>33 mins</span>
      <ion-badge item-right>Data Storage</ion-badge>
   </ion-item>
 
 </ion-card>
+
+
+
+<ion-card>
+
+  <div class="video-container">
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Z5vNK6U2HKA?list=PL_RVC-cMNyYTz8zlxq117O1bfji-knooI" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <ion-item>
+    <ion-icon name="football" item-left large></ion-icon>
+    <h2>Storage Options</h2>
+    <p>Understand AWS Storage Optiony</p>
+    <p>Amazon Web Services - Webinar Channel</p>
+  </ion-item>
+
+  <ion-item>
+    <span item-left>60 mins</span>
+     <ion-badge item-right>Data Storage</ion-badge>
+  </ion-item>
+
+</ion-card>
+
+
+
+
+<ion-card>
+
+  <div class="video-container">
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/OEK7mHn4JLs?list=PL_RVC-cMNyYTz8zlxq117O1bfji-knooI" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <ion-item>
+    <ion-icon name="football" item-left large></ion-icon>
+    <h2>Security Keynote Address</h2>
+    <p>AWS re:Invent 2014 | (SEC201) AWS Security</p>
+    <p>Amazon Web Services - Webinar Channel</p>
+  </ion-item>
+
+  <ion-item>
+    <span item-left>41 mins</span>
+     <ion-badge color="danger" item-right>Security</ion-badge>
+  </ion-item>
+
+</ion-card>
+
 
 
 
