--- a/src/pages/videos/videos.html
+++ b/src/pages/videos/videos.html
@@ -23,7 +23,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/n6eL9W1Go08" frameborder="0" allowfullscreen></iframe>
   </div>
   <ion-item>
-    <ion-icon name="football" item-left large></ion-icon>
+    <ion-icon name="videocam" item-left large></ion-icon>
     <h2>Hybrid Architectures</h2>
     <p>AWS June Webinar Series </p>
     <p>Deep dive: Hybrid Architectures</p>
@@ -45,7 +45,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/WrvjEHeh_-Y" frameborder="0" allowfullscreen></iframe>
   </div>
   <ion-item>
-    <ion-icon name="football" item-left large></ion-icon>
+    <ion-icon name="videocam" item-left large></ion-icon>
     <h2>Security using CloudTrail</h2>
     <p>AWS July Webinar Series - Deep Dive</p>
     <p>Troubleshooting Operational and Security using CloudTrail</p>
@@ -65,7 +65,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Jqzw5Wxw9Lo" frameborder="0" allowfullscreen></iframe>
   </div>
   <ion-item>
-    <ion-icon name="football" item-left large></ion-icon>
+    <ion-icon name="videocam" item-left large></ion-icon>
     <h2>Storage Gateway</h2>
     <p>Deep Dive on the AWS Storage Gateway</p>
     <p> April 2017 AWS Online Tech Talks</p>
@@ -86,7 +86,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Z5vNK6U2HKA?list=PL_RVC-cMNyYTz8zlxq117O1bfji-knooI" frameborder="0" allowfullscreen></iframe>
   </div>
   <ion-item>
-    <ion-icon name="football" item-left large></ion-icon>
+    <ion-icon name="videocam" item-left large></ion-icon>
     <h2>Storage Options</h2>
     <p>Understand AWS Storage Optiony</p>
     <p>Amazon Web Services - Webinar Channel</p>
@@ -108,7 +108,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/OEK7mHn4JLs?list=PL_RVC-cMNyYTz8zlxq117O1bfji-knooI" frameborder="0" allowfullscreen></iframe>
   </div>
   <ion-item>
-    <ion-icon name="football" item-left large></ion-icon>
+    <ion-icon name="videocam" item-left large></ion-icon>
     <h2>Security Keynote Address</h2>
     <p>AWS re:Invent 2014 | (SEC201) AWS Security</p>
     <p>Amazon Web Services - Webinar Channel</p>
