--- a/src/pages/contactUsPage/contactUsPage.html
+++ b/src/pages/contactUsPage/contactUsPage.html
@@ -12,12 +12,12 @@
 <ion-card>
  
 
-<ion-item>
+<ion-item text-wrap>
     <ion-avatar item-left>
        <img src="assets/img/icon.png">
     </ion-avatar>
-    <h2>AWS Cert. Sol. Arch Professional</h2>
-    <p>Cloud Pros</p>
+    <h2>AWS Certified Solution Architect Professional</h2>
+    <p> - Cloud Pros</p>
   </ion-item>
 <hr/>
  <ion-card-content style="text-align: justify;">    
