added contact on login

--- a/src/pages/auth/login.html
+++ b/src/pages/auth/login.html
@@ -62,5 +62,12 @@
    <div class="center">
     Don't remember login? <button margin-bottom ion-button clear small (click)="navToForgotPassword()">Forgot Password</button>
   </div>
+  <p>&nbsp;</p>
+   <div class="center">
+      <small>For help or questions emails us at </small><br/>
+      <ion-chip color="primary">
+  <ion-label color="white">cloudpros1@gmail.com</ion-label>
+</ion-chip>
+  </div>
 </ion-content>
 
