--- a/src/pages/topicsListPage/topicsListPage.html
+++ b/src/pages/topicsListPage/topicsListPage.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Practice Examsgt</ion-title>
+    <ion-title>Practice Exams</ion-title>
   <!--<ion-buttons end>
       <button ion-button icon-only (click)="reorderNow()">
         <ion-icon [name]="reorderIcon"></ion-icon>
