--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -29,7 +29,7 @@
             </div>-->
 
         <div class="center">
-            <button ion-button outline><ion-icon name="timer"></ion-icon>  &nbsp;{{minutes}} Mts,  {{seconds}} s</button>
+            <button ion-button outline (click)="openExplanationModal(question)"><ion-icon name="timer"></ion-icon>  &nbsp;{{minutes}} Mts,  {{seconds}} s</button>
         </div>
 
         <ion-card>
